--- a/.kodiak.toml
+++ b/.kodiak.toml
@@ -4,4 +4,4 @@
 # Minimal config. version is the only required field.
 version = 1
 merge.automerge_label = ["dependencies", "automerge"]
-usernames = ["dependabot"]
+usernames = ["dependabot","github-actions"]
